# gmail-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: style_guide.md
src/gmail_mcp/: auth.py  corpus.py  gmail_client.py  server.py
