[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-mcp"
version = "0.1.0"
description = "MCP server for Gmail - read unread emails and create draft replies"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
gmail-mcp = "gmail_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gmail_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/gmail_mcp"]
